[gd_scene load_steps=8 format=2]

[ext_resource path="res://SpringScenes/DoorStopV2/twang1.wav" type="AudioStream" id=1]
[ext_resource path="res://SpringScenes/Fishies/Fishies.gd" type="Script" id=2]
[ext_resource path="res://Models/DoorstopV2/DoorstopV2.glb" type="PackedScene" id=3]
[ext_resource path="res://Models/Fishies/pond.glb" type="PackedScene" id=4]
[ext_resource path="res://Materials/default_env.tres" type="Environment" id=8]

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
albedo_color = Color( 0.384314, 0.439216, 0.447059, 0.27451 )

[sub_resource type="PlaneMesh" id=2]
material = SubResource( 3 )
size = Vector2( 200, 200 )

[node name="SS_DoorStop" type="ViewportContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 720, 1280 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Floor" type="MeshInstance" parent="Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.47721, -76.1848 )
cast_shadow = 0
mesh = SubResource( 2 )
material/0 = null

[node name="TwangSFX" type="AudioStreamPlayer" parent="Viewport"]
stream = ExtResource( 1 )

[node name="DoorstopAnchor" type="Spatial" parent="Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.81913, 7 )

[node name="DoorstopV2" parent="Viewport/DoorstopAnchor" instance=ExtResource( 3 )]
transform = Transform( -5, 0, -7.54979e-07, 0, 5, 0, 7.54979e-07, 0, -5, 0, 2.5, 0 )

[node name="Camera" type="Camera" parent="Viewport"]
transform = Transform( 1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 15, 17 )
environment = ExtResource( 8 )
current = true
fov = 80.0
size = 30.0
far = 400.0

[node name="CameraAnchor" type="Spatial" parent="Viewport"]
transform = Transform( 1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 0, 0 )

[node name="DirectionalLight" type="DirectionalLight" parent="Viewport"]
transform = Transform( -0.707107, -0.612373, 0.353553, 0, 0.5, 0.866025, -0.707107, 0.612372, -0.353553, 0, 26.7011, 15.1889 )
directional_shadow_mode = 0
directional_shadow_max_distance = 300.0

[node name="pond" parent="." instance=ExtResource( 4 )]
